贪心算法练习

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>coding-interview</module>
         <module>sword-to-offer</module>
         <module>leetcode</module>
+        <module>dynamic-programming</module>
     </modules>
 
 
